--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ https://www.w3schools.com/html/html5_semantic_elements.asp
 			<section class="feeds">
 				<article class="feeds__one">
 					<div class="user-information"><i class="fa fa-user-circle-o" aria-hidden="true"></i> James Carter</div>
-					<img data-likes="9" src="https://plchldr.co/i/400x400?bg=EB6361&text=Instagram" alt="plchldr.co" />
+					<img data-likes="2" src="photo1.jpg" />
 					<div class="content">
 						<div class="action">
 							<i class="fa fa-heart-o" aria-hidden="true"></i>
@@ -102,7 +102,7 @@ https://www.w3schools.com/html/html5_semantic_elements.asp
 
 				<article class="feeds__one">
 					<div class="user-information"><i class="fa fa-user-circle-o" aria-hidden="true"></i> John Brown</div>
-					<img data-likes="2" src="https://plchldr.co/i/400x400?bg=3D8EB9&text=Instagram" />
+					<img data-likes="2" src="photo2.jpg" />
 					<div class="content">
 						<div class="action">
 							<i class="fa fa-heart-o" aria-hidden="true"></i>
@@ -117,7 +117,7 @@ https://www.w3schools.com/html/html5_semantic_elements.asp
 
 				<article class="feeds__one">
 					<div class="user-information"><i class="fa fa-user-circle-o" aria-hidden="true"></i> John Brown</div>
-					<img data-likes="2" src="https://plchldr.co/i/400x400?bg=FFFFFF&text=Instagram&fc=000000" />
+					<img data-likes="2" src="photo3.jpg" />
 					<div class="content">
 						<div class="action">
 							<i class="fa fa-heart-o" aria-hidden="true"></i>
